# FinancialChatBot

./: .env.example  .gitignore  README.md  mcp.json  package-lock.json  package.json  pyproject.toml  requirements.txt
Documents/: FinancialTrendAnalysis2.xlsx  Financial_Q1_Q2_2023.xlsx  Financial_Report_2022_2.docx  Financial_Report_2023_2.docx  Ml Rag Interview Guide.docx  Monthly_Profit_Summary_2023.xlsx  Product_Sales_2023.xlsx  sample_financial_data.xlsx  simple_financial_sample.csv
app/: logger.py  main.py  utils.py
app/config/: settings.py
app/core/: chat_history.py  intent_classifier.py  multilingual.py  response_processor.py  tool_orchestrator.py  tool_orchestrator_utils.py  tools_utils.py
app/database/: database.py
app/mcp/: mcp_server.py
app/schema/: models.py
app/service/: chat_service.py  document_service.py  link_service.py
app/tools/: base_tool.py  comparative_analyser.py  document_summarizer.py  financial_trend_analyser.py  general_query.py  statistical_analyzer.py  table_extractor.py  web_researcher.py
pages/: index.jsx
pages/chat/: [sessionId].jsx
styles/: globals.css
utils/: api.js
