[project]
name = "trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "ghostscript>=0.8.1",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.4",
    "matplotlib>=3.10.5",
    "motor>=3.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.1",
    "uvicorn>=0.35.0",
]
